# summareasy

./: .env-sample  .gitignore  README.md  mojoproject.toml  pyproject.toml
summareasy/: main.py
summareasy/configs/: settings.py
summareasy/data/: database.py  models.py
